src/test/ui/proc-macro/disappearing-resolution.stderr
error: cannot find attribute `empty_helper` in this scope
  --> $DIR/disappearing-resolution.rs:18:3
   |
LL | #[empty_helper]
   |   ^^^^^^^^^^^^

error[E0603]: derive macro `Empty` is private
  --> $DIR/disappearing-resolution.rs:11:8
   |
LL | use m::Empty;
   |        ^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
